--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -13,11 +13,9 @@ xrender-sync-fence = true;
 blur-background = true;
 
 # Transparancy
-opacity-rule = [
-	"85:class_g = 'Gnome-terminal'"
-];
-
-corner-radius = 4;
+# opacity-rule = [
+# 	"85:class_g = 'Gnome-terminal'"
+# ];
 
 # Blur
 blur:
@@ -26,3 +24,10 @@ blur:
 	size = 38;
 	deviation = 20;
 }
+
+# Shadows
+shadow = true;
+shadow-radius = 30;
+shadow-opacity = 0.65;
+shadow-offset-x = -20;
+shadow-offset-y = -20;
