--- a/config/polybar/config
+++ b/config/polybar/config
@@ -10,12 +10,12 @@
 ;==========================================================
 
 [colors]
-background = #3b4252
-background-alt = #303643
-foreground = #ffffff
-foreground-alt = #4287f5
-primary = #03b6fc
-secondary = #303643
+background = #0D0D0D
+background-alt = #727A8C
+foreground = #F2F2F2
+foreground-alt = #D9D9D9
+primary = #7dbf2f
+secondary = #BFA62A
 alert = #e65e70
 
 [bar/main]
@@ -27,6 +27,7 @@ spacing = 1
 
 enable-ipc = true
 override-redirect = true
+wm-restack = i3
 offset-x = 12.5%
 
 background = ${colors.background}
@@ -109,7 +110,7 @@ time-alt = %H:%M:%S
 
 format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #03b6fc
+format-underline = #7dbf2f
 
 label = %date% %time%
 
