--- a/config/polybar/config
+++ b/config/polybar/config
@@ -10,7 +10,7 @@
 ;==========================================================
 
 [colors]
-background = #0D0D0D
+background = #292929
 background-alt = #727A8C
 foreground = #F2F2F2
 foreground-alt = #D9D9D9
@@ -45,11 +45,11 @@ module-margin-left = 1;
 
 modules-left = i3 xwindow
 modules-center = spotify previous playpause next
-modules-right = temperature alsa date powermenu
+modules-right = temperature battery alsa date powermenu
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label = %title:0:40:...%
 
 [module/filesystem]
 type = internal/fs
@@ -103,12 +103,12 @@ type = internal/date
 interval = 5
 
 date =
-date-alt = " %Y-%m-%d"
+date-alt = "%Y-%m-%d"
 
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
+format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #7dbf2f
 
@@ -121,7 +121,7 @@ format-volume = <label-volume> <bar-volume>
 label-volume = VOL
 label-volume-foreground = ${root.foreground}
 
-format-muted-prefix = " "
+format-muted-prefix = ""
 format-muted-foreground = ${colors.foreground-alt}
 label-muted = sound muted
 
@@ -135,6 +135,13 @@ bar-volume-fill-font = 2
 bar-volume-empty = ─
 bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.primary}
+
+[module/battery]
+type = internal/battery
+full-at = 99
+battery = BAT0
+adapter = ADP1
+poll-interval = 5
 
 [module/temperature]
 type = internal/temperature
@@ -151,7 +158,7 @@ type = custom/menu
 
 format-spacing = 1
 
-label-open = 
+label-open = X
 label-open-foreground = #ffffff
 label-close =  cancel
 label-close-foreground = #ffffff
