--- a/config/i3/config
+++ b/config/i3/config
@@ -13,7 +13,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -23,8 +23,8 @@ bindsym $mod+n move scratchpad
 bindsym $mod+Shift+n scratchpad show
 
 # Run menu
-bindsym $mod+d exec --no-startup-id rofi -show drun
-bindsym $mod+Shift+d exec --no-startup-id rofi -show run
+bindsym $mod+d exec --no-startup-id ~/Projects/.dotfiles/config/rofi/drun.sh
+bindsym $mod+Shift+d exec --no-startup-id ~/Projects/.dotfiles/config/rofi/run.sh
 
 # change focus
 bindsym $mod+h focus left
@@ -140,12 +140,12 @@ exec_always setxkbmap se
 exec_always xset m 1
 
 # Picom
-exec_always --no-startup-id picom --config ~/.config/picom.conf -CGb --experimental-backends
+exec_always --no-startup-id ~/Projects/.dotfiles/config/picom/launch.sh
 
 # -- Definitions --
 set $mod Mod4
-set $inner_gaps 24
-set $outer_gaps 28
+set $inner_gaps 20
+set $outer_gaps 48
 
 # Colors
 client.focused #7dbf2f #7dbf2f #7dbf2f #7dff2f
@@ -160,7 +160,7 @@ gaps inner $inner_gaps
 gaps outer $outer_gaps
 
 # Polybar
-exec_always --no-startup-id polybar main
+exec_always --no-startup-id ~/Projects/.dotfiles/config/polybar/launch.sh
 
 # Monitor setup
 exec_always /home/tage/.screenlayout/scaled.sh
