--- a/config/i3/config
+++ b/config/i3/config
@@ -39,6 +39,7 @@ bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
 # Split
+exec_always --no-startup-id /usr/bin/alternating_layouts.py
 bindsym $mod+ctrl+h split h
 bindsym $mod+ctrl+v split v
 
@@ -131,7 +132,7 @@ exec_always --no-startup-id ~/Projects/.dotfiles/config/picom/launch.sh
 
 # -- Definitions --
 set $mod Mod4
-set $inner_gaps 20
+set $inner_gaps 12
 set $outer_gaps 32
 
 # Colors
