--- a/config/i3/config
+++ b/config/i3/config
@@ -57,11 +57,14 @@ bindsym $mod+space floating toggle
 # change focus between tiling / floating windows
 bindsym $mod+Shift+space focus mode_toggle
 
-# focus the parent container
+# focus child container
 bindsym $mod+c focus child
 
 # focus the parent container
 bindsym $mod+p focus parent
+
+# Lock screen
+bindsym $mod+x exec $HOME/.bin/scripts/lock.sh
 
 # Workspace name definitions
 set $ws1 "1"
@@ -133,7 +136,7 @@ exec_always --no-startup-id ~/Projects/.dotfiles/config/picom/launch.sh
 # -- Definitions --
 set $mod Mod4
 set $inner_gaps 12
-set $outer_gaps 32
+set $outer_gaps 16
 
 # Colors
 client.focused #7dbf2f #7dbf2f #7dbf2f #7dff2f
