--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -23,12 +23,13 @@ scrolling:
 
 font:
   normal:
-    family: fira code medium
+    family: fira code
+    style: Medium
   bold:
-    family: fira code medium
-    style: Bold
+    family: fira code
+    style: SemiBold
   italic:
-    family: fira code medium
+    family: fira code
     style: Italic
 
   bold_italic:
@@ -42,7 +43,7 @@ font:
     x: 0
     y: 0
 
-draw_bold_text_with_bright_colors: false
+draw_bold_text_with_bright_colors: true
 
 colors:
   primary:
