--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -6,7 +6,7 @@ window:
     x: 5
     y: 5
   dynamic_padding: false
-  decorations: none
+  decorations: Full
   startup_mode: Windowed
   title: Alacritty
   dynamic_title: true
@@ -94,7 +94,7 @@ colors:
     red:     '#cc6666'
     green:   '#7dbf2f'
     yellow:  '#f0c674'
-    blue:    '#81a2be'
+    blue:    '#01BABF'
     magenta: '#b294bb'
     cyan:    '#8abeb7'
     white:   '#c5c8c6'
@@ -129,7 +129,7 @@ background_opacity: 1.0
 
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
-  save_to_clipboard: false
+  save_to_clipboard: true
 
 cursor:
   style:
@@ -152,7 +152,7 @@ working_directory: None
 mouse:
   double_click: { threshold: 300 }
   triple_click: { threshold: 300 }
-  hide_when_typing: false
+  hide_when_typing: true
 
 #key_bindings:
   #- { key: Paste,                                       action: Paste          }
