--- a/config/i3/config
+++ b/config/i3/config
@@ -139,7 +139,7 @@ set $inner_gaps 8
 set $outer_gaps 4
 
 # Colors
-client.focused #7dbf2f #7dbf2f #7dbf2f #7dff2f
+client.focused #01BABF #01BABF #01BABF #01BABF
 client.unfocused #1d1d1d #1d1d1d #1d1d1d #1d1d1d
 client.focused_inactive #1d1d1d #1d1d1d #1d1d1d #1d1d1d
 client.urgent #1d1d1d #1d1d1d #1d1d1d #1d1d1d
