--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -6,7 +6,7 @@ glx-copy-from-front = true;
 glx-swap-method = 2;
 xrender-sync-fence = true;
 
-# inactive-opacity = 0.90;
+inactive-opacity = 0.90;
 # active-opacity = 0.90;
 # frame-opacity = 0.90;
 
@@ -21,13 +21,13 @@ blur-background = true;
 blur:
 {
 	method = "gaussian";
-	size = 38;
-	deviation = 20;
+	size = 18;
+	deviation = 10;
 }
 
 # Shadows
 shadow = true;
 shadow-radius = 30;
-shadow-opacity = 0.65;
-shadow-offset-x = -20;
+shadow-opacity = 1.00;
+shadow-offset-x = -30;
 shadow-offset-y = -20;
