--- a/config/polybar/config
+++ b/config/polybar/config
@@ -14,7 +14,7 @@ background = #292929
 background-alt = #727A8C
 foreground = #F2F2F2
 foreground-alt = #D9D9D9
-primary = #01BABF
+primary = #FFFFFF
 secondary = #BFA62A
 alert = #e65e70
 
@@ -57,7 +57,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
+label-mounted = %{F#FFFFFF}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
@@ -110,7 +110,7 @@ time-alt = %H:%M:%S
 
 format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #01BABF
+format-underline = #FFFFFF
 
 label = %date% %time%
 
