--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -43,11 +43,11 @@ font:
     x: 0
     y: 0
 
-draw_bold_text_with_bright_colors: true
+draw_bold_text_with_bright_colors: false
 
 colors:
   primary:
-    background: '#1d1d1d'
+    background: '#212121'
     foreground: '#F2F2F2'
     dim_foreground: '#D9D9D9'
     bright_foreground: '#F2F2F2'
