--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -16,6 +16,7 @@ window:
     general: Alacritty
 
   gtk_theme_variant: None
+  opacity: 1
 
 scrolling:
   history: 10000
@@ -124,8 +125,6 @@ bell:
   duration: 0
   color: '#ffffff'
   command: None
-
-background_opacity: 1.0
 
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
