--- a/config/i3/config
+++ b/config/i3/config
@@ -122,18 +122,20 @@ exec_always --no-startup-id ~/Projects/.dotfiles/config/picom/launch.sh
 
 # -- Definitions --
 set $mod Mod4
-set $inner_gaps 12
-set $outer_gaps 8
+# set $inner_gaps 12
+# set $outer_gaps 8
+set $inner_gaps 0
+set $outer_gaps 0
 
 # Colors
-client.focused #FFFFFF #FFFFFF #FFFFFF #FFFFFF
+client.focused #101010 #101010 #101010 #101010
 client.unfocused #1d1d1d #1d1d1d #1d1d1d #1d1d1d
 client.focused_inactive #1d1d1d #1d1d1d #1d1d1d #1d1d1d
 client.urgent #1d1d1d #1d1d1d #1d1d1d #1d1d1d
 
 # -- Gaps --
-for_window [class="^.*"] border pixel 2
-hide_edge_borders both
+for_window [class="^.*"] border pixel 4
+hide_edge_borders none
 gaps inner $inner_gaps
 gaps outer $outer_gaps
 
