--- a/config/i3/config
+++ b/config/i3/config
@@ -128,7 +128,7 @@ set $inner_gaps 0
 set $outer_gaps 0
 
 # Colors
-client.focused #101010 #101010 #101010 #101010
+client.focused #2c2c2c #2c2c2c #2c2c2c #2c2c2c
 client.unfocused #1d1d1d #1d1d1d #1d1d1d #1d1d1d
 client.focused_inactive #1d1d1d #1d1d1d #1d1d1d #1d1d1d
 client.urgent #1d1d1d #1d1d1d #1d1d1d #1d1d1d
