--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -6,7 +6,7 @@ glx-copy-from-front = true;
 glx-swap-method = 2;
 xrender-sync-fence = true;
 
-inactive-opacity = 0.90;
+# inactive-opacity = 0.90;
 # active-opacity = 0.90;
 # frame-opacity = 0.90;
 
