--- a/config/polybar/config
+++ b/config/polybar/config
@@ -23,6 +23,7 @@ width = 100%
 height = 32
 radius = 0.0
 padding-right = 2
+module-margin = 1
 spacing = 1
 
 enable-ipc = true
@@ -36,8 +37,8 @@ foreground = ${colors.foreground}
 line-size = 3
 line-color = #ffffff
 
-font-0 = Iosevka:size=12;2
-font-1 = FontAwesome:size=12;2
+font-0 = Iosevka:size=12;3
+font-1 = FontAwesome:size=12;3
 
 bottom = false
 module-margin-right = 1;
@@ -45,7 +46,7 @@ module-margin-left = 1;
 
 modules-left = i3 xwindow
 modules-center = spotify previous playpause next
-modules-right = temperature battery pulseaudio-control date powermenu
+modules-right = temperature battery pulseaudio-control date
 
 [module/xwindow]
 type = internal/xwindow
