--- a/config/i3/config
+++ b/config/i3/config
@@ -43,6 +43,8 @@ bindsym $mod+Shift+l move right
 
 # Split
 exec_always --no-startup-id /usr/bin/alternating_layouts.py
+bindsym $mod+e layout tabbed
+bindsym $mod+w layout toggle split
 
 # Fullscreen
 bindsym $mod+f fullscreen toggle
@@ -154,3 +156,20 @@ exec_always --no-startup-id ~/.config/nitrogen/launch.sh
 
 # lock screen
 exec --no-startup-id ~/.bin/scripts/lock.sh
+
+# Layout
+exec --no-startup-id i3-msg 'workspace 1:1; append_layout /home/tage/.bin/workspace-1.json'
+exec --no-startup-id i3-msg 'workspace 1:1; exec --no-startup-id /usr/bin/alacritty --title "CLOCK" -e /home/tage/.bin/scripts/clock.sh'
+exec --no-startup-id i3-msg 'workspace 1:1; exec --no-startup-id /usr/bin/alacritty --title "TREE" -e /home/tage/.bin/scripts/tree.sh'
+exec --no-startup-id i3-msg 'workspace 1:1; exec --no-startup-id /usr/bin/alacritty --title "TERMINAL"'
+
+exec --no-startup-id i3-msg 'workspace 2:2; exec /usr/bin/firefox'
+
+exec --no-startup-id i3-msg 'workspace 3:3; append_layout /home/tage/.bin/workspace-3.json'
+exec --no-startup-id i3-msg 'workspace 3:3; exec --no-startup-id /usr/bin/spotify'
+exec --no-startup-id i3-msg 'workspace 3:3; exec --no-startup-id /usr/bin/discord'
+
+exec --no-startup-id i3-msg 'workspace 1:1; focus right'
+
+for_window [class="Spotify"] move to workspace 3:3; workspace 3:3; move left; workspace back_and_forth
+for_window [class="discord"] move to workspace 3:3; workspace 3:3; move right; workspace back_and_forth
