--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -24,7 +24,7 @@ scrolling:
 
 font:
   normal:
-    family: Fira Code
+    family: Hack
     style: Medium
   bold:
     family: Hack Nerd Font Mono
