--- a/config/i3/config
+++ b/config/i3/config
@@ -127,13 +127,13 @@ exec_always --no-startup-id ~/Projects/.dotfiles/config/picom/launch.sh
 
 # -- Definitions --
 set $mod Mod4
-# set $inner_gaps 12
-# set $outer_gaps 8
-set $inner_gaps 0
-set $outer_gaps 0
+set $inner_gaps 4
+set $outer_gaps 1
+# set $inner_gaps 0
+# set $outer_gaps 0
 
 # Colors
-client.focused #2c2c2c #2c2c2c #2c2c2c #2c2c2c
+client.focused #2e2e2e #2e2e2e #2e2e2e #2e2e2e
 client.unfocused #1d1d1d #1d1d1d #1d1d1d #1d1d1d
 client.focused_inactive #1d1d1d #1d1d1d #1d1d1d #1d1d1d
 client.urgent #1d1d1d #1d1d1d #1d1d1d #1d1d1d
@@ -166,5 +166,5 @@ exec --no-startup-id i3-msg 'workspace 3:3; exec --no-startup-id /usr/bin/discor
 
 exec --no-startup-id i3-msg 'workspace 1:1; focus right'
 
-for_window [class="Spotify"] move to workspace 3:3; workspace 3:3; move left; workspace back_and_forth
-for_window [class="discord"] move to workspace 3:3; workspace 3:3; move right; workspace back_and_forth
+for_window [class="Spotify"] move to workspace 3:3
+for_window [class="discord"] move to workspace 3:3
