--- a/config/polybar/config
+++ b/config/polybar/config
@@ -20,7 +20,7 @@ alert = #e65e70
 
 [bar/main]
 width = 100%
-height = 24
+height = 28
 radius = 0.0
 padding-right = 2
 module-margin = 1
@@ -38,11 +38,11 @@ line-size = 2
 line-color = #ffffff
 
 font-0 = Iosevka:size=10;3
-font-1 = FontAwesome:size=10;3
+font-1 = Font Awesome 5 Free:size=10:1
 
 bottom = false
-module-margin-right = 1;
-module-margin-left = 1;
+module-margin-right = 1
+module-margin-left = 1
 
 modules-left = i3 xwindow
 modules-center = spotify previous playpause next
