--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -3,8 +3,8 @@ env:
 
 window:
   padding:
-    x: 5
-    y: 5
+    x: 10
+    y: 10
   dynamic_padding: false
   decorations: Full
   startup_mode: Windowed
@@ -24,8 +24,8 @@ scrolling:
 
 font:
   normal:
-    family: Hack
-    style: Medium
+    family: Hack Nerd Font Mono
+    style: Regular
   bold:
     family: Hack Nerd Font Mono
     style: Bold
@@ -44,7 +44,7 @@ font:
     x: 0
     y: 0
 
-draw_bold_text_with_bright_colors: false
+draw_bold_text_with_bright_colors: true
 
 colors:
   primary:
