--- a/config/i3/config
+++ b/config/i3/config
@@ -1,4 +1,4 @@
-font pango:monospace 8
+font pango:Inconsolata, Icons 12
 
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
@@ -56,16 +56,16 @@ bindsym $mod+Shift+space focus mode_toggle
 bindsym $mod+x exec --no-startup-id $HOME/.bin/scripts/lock.sh
 
 # Workspace name definitions
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
+set $ws1 "1:Terminal"
+set $ws2 "2:Web"
+set $ws3 "3:Social"
+set $ws4 "4:Explore"
+set $ws5 "5:Misc 1"
+set $ws6 "6:Misc 2"
+set $ws7 "7:Misc 3"
+set $ws8 "8:Misc 4"
+set $ws9 "9:Misc 5"
+set $ws10 "10:Misc 6"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
@@ -148,14 +148,15 @@ exec_always /home/tage/.screenlayout/scaled.sh
 # Display wallpaper
 exec_always --no-startup-id ~/.config/nitrogen/launch.sh
 
+for_window [class="firefox"] move to workspace $ws2
+for_window [class="Spotify"] move to workspace $ws3
+for_window [class="discord"] move to workspace $ws3
+for_window [title="RANGER"] move to workspace $ws4
+for_window [title="TERMINAL1"] floating enable
+
 # Layout
-exec --no-startup-id i3-msg 'workspace 1:1; exec --no-startup-id /usr/bin/alacritty --title "TERMINAL"'
-
-exec --no-startup-id i3-msg 'workspace 2:2; exec /usr/bin/firefox'
-exec --no-startup-id i3-msg 'workspace 3:3; exec --no-startup-id /usr/bin/spotify'
-exec --no-startup-id i3-msg 'workspace 3:3; exec --no-startup-id /usr/bin/discord'
-
-exec --no-startup-id i3-msg 'workspace 1:1; focus right'
-
-for_window [class="Spotify"] move to workspace 3:3
-for_window [class="discord"] move to workspace 3:3
+exec --no-startup-id i3-msg 'exec --no-startup-id /usr/bin/alacritty --title "TERMINAL1"'
+exec --no-startup-id i3-msg 'exec --no-startup-id /home/tage/.bin/scripts/ranger.sh'
+exec --no-startup-id i3-msg 'exec /usr/bin/firefox'
+exec --no-startup-id i3-msg 'exec --no-startup-id /usr/bin/spotify'
+exec --no-startup-id i3-msg 'exec --no-startup-id /usr/bin/discord'
