--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -23,7 +23,7 @@ background = #292929
 background-alt = #727A8C
 foreground = #F2F2F2
 foreground-alt = #D9D9D9
-primary = #82aaff
+primary = #4a4a4a
 secondary = #FFFFFF
 alert = #e65e70
 
@@ -74,10 +74,11 @@ type = internal/xworkspaces
 pin-workspaces = false
 enable-click = true
 
-icon-0 = 1:Terminal;
-icon-1 = 2:Web;
-icon-2 = 3:Social;
-icon-3 = 4:Explore;
+icon-0 = 1;
+icon-1 = 2;
+icon-2 = 3;
+icon-3 = 4;
+icon-4 = 5;
 icon-default = 
 ;    
 
@@ -86,13 +87,13 @@ format-padding = 2
 label-monitor = %name%
 
 ; Available tokens: %name% %icon% %index%
-label-active = "%icon%"
-label-active-foreground = ${colors.primary}
-label-active-overline = ${colors.primary}
+label-active = %icon%
+label-active-foreground = #FFF
+label-active-overline = #FFF
 
 ; Available tokens: %name% %icon% %index%
 label-occupied = %icon%
-label-occupied-foreground = ${colors.foreground}
+label-occupied-foreground = ${colors.primary}
 
 ; Available tokens: %name% %icon% %index%
 label-urgent = %icon%
@@ -108,10 +109,10 @@ label-empty-padding = 2
 
 [module/date]
 type = internal/date
-interval = 5
+interval = 1
 
 date =
-date-alt = "%Y-%m-%d"
+date-alt = "%Y-%m-%d "
 
 time = %H:%M
 time-alt = %H:%M:%S
