--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -19,12 +19,12 @@ margin-top = 0
 margin-bottom = 0
 
 [colors]
-background = #292929
-background-alt = #727A8C
-foreground = #F2F2F2
+background = ${xrdb:color0:#292930}
+background-alt = ${xrdb:color3:#727A8C}
+foreground = ${xrdb:color1:#F2F2F2}
 foreground-alt = #D9D9D9
-primary = #4a4a4a
-secondary = #FFFFFF
+primary = ${xrdb:color2:#4a4a4a}
+secondary = ${xrdb:color0:#FFFFFF}
 alert = #e65e70
 
 [bar/main]
@@ -77,8 +77,6 @@ enable-click = true
 icon-0 = 1;
 icon-1 = 2;
 icon-2 = 3;
-icon-3 = 4;
-icon-4 = 5;
 icon-default = 
 ;    
 
@@ -159,7 +157,7 @@ label-discharging =  %percentage%%
 label-full =  %percentage%%
 
 [module/temperature]
-type = internal/temperature
+tye = internal/temperature
 thermal-zone = 0
 format = <label>
 label =  %temperature-c%
