--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -6,7 +6,7 @@ glx-copy-from-front = true;
 glx-swap-method = 2;
 xrender-sync-fence = true;
 
-# inactive-opacity = 0.90;
+# inactive-opacity = 0.97;
 # active-opacity = 0.90;
 # frame-opacity = 0.90;
 
@@ -18,16 +18,16 @@ blur-background = true;
 # ];
 
 # Blur
-blur:
-{
-	method = "gaussian";
-	size = 10;
-	deviation = 2;
-}
+# blur:
+# {
+# 	method = "gaussian";
+# 	size = 20;
+# 	deviation = 20;
+# }
 
 # Shadows
 shadow = true;
-shadow-radius = 30;
-shadow-opacity = 0.20;
+shadow-radius = 20;
+shadow-opacity = 0.40;
 shadow-offset-x = -30;
 shadow-offset-y = -20;
