--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -10,8 +10,7 @@ xrender-sync-fence = true;
 # active-opacity = 0.90;
 # frame-opacity = 0.90;
 
-blur-background = true;
-
+# blur-background = true;
 # Transparancy
 # opacity-rule = [
 # 	"85:class_g = 'Gnome-terminal'"
@@ -31,3 +30,5 @@ shadow-radius = 20;
 shadow-opacity = 0.40;
 shadow-offset-x = -30;
 shadow-offset-y = -20;
+
+corner-radius = 0;
