--- a/config/i3/config
+++ b/config/i3/config
@@ -128,22 +128,19 @@ set $inner_gaps 4
 set $outer_gaps 0
 
 # Colors
-client.focused #2e2e2e #2e2e2e #2e2e2e #2e2e2e
+client.focused #FFF #FFF #FFF #FFF
 client.unfocused #1d1d1d #1d1d1d #1d1d1d #1d1d1d
 client.focused_inactive #1d1d1d #1d1d1d #1d1d1d #1d1d1d
 client.urgent #1d1d1d #1d1d1d #1d1d1d #1d1d1d
 
 # -- Gaps --
-for_window [class="^.*"] border pixel 3
+for_window [class="^.*"] border pixel 2
 hide_edge_borders none
 gaps inner $inner_gaps
 gaps outer $outer_gaps
 
 # Polybar
 exec_always --no-startup-id ~/Projects/.dotfiles/config/polybar/launch.sh
-
-# Monitor setup
-exec_always /home/tage/.screenlayout/scaled.sh
 
 # Display wallpaper
 exec_always --no-startup-id ~/.config/nitrogen/launch.sh
