--- a/config/i3/config
+++ b/config/i3/config
@@ -67,8 +67,11 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+# Unity workaround
+set $unity-refresh exec i3-msg [class="Unity"] fullscreen toggle; exec i3-msg [class="Unity"] fullscreen toggle
+
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
+bindsym $mod+1 workspace number $ws1; $unity-refresh
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
 bindsym $mod+4 workspace number $ws4
@@ -90,18 +93,6 @@ bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
-
-# Set assign workspaces to monitors
-workspace $ws1 output DP-4
-workspace $ws2 output DP-2
-workspace $ws3 output HDMI-0
-workspace $ws4 output DP-4
-workspace $ws5 output DP-2
-workspace $ws6 output HDMI-0
-workspace $ws7 output DP-4
-workspace $ws8 output DP-2
-workspace $ws9 output HDMI-0
-workspace $ws10 output DP-4
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -128,7 +119,7 @@ set $inner_gaps 4
 set $outer_gaps 0
 
 # Colors
-client.focused #FFF #FFF #FFF #FFF
+client.focused #ffffff #ffffff #ffffff #ffffff
 client.unfocused #1d1d1d #1d1d1d #1d1d1d #1d1d1d
 client.focused_inactive #1d1d1d #1d1d1d #1d1d1d #1d1d1d
 client.urgent #1d1d1d #1d1d1d #1d1d1d #1d1d1d
