Massive cleanup Removed scripts, renamed configuration files, moved things around and modified readme

--- a/config/i3.config
+++ b/config/i3.config
@@ -1,3 +1,5 @@
+# !!! Inaccurate script locations !!!
+
 font pango:Inconsolata, Icons 12
 
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
@@ -23,8 +25,8 @@ bindsym $mod+n move scratchpad
 bindsym $mod+Shift+n scratchpad show
 
 # Run menu
-bindsym $mod+d exec --no-startup-id ~/Projects/.dotfiles/config/rofi/drun.sh
-bindsym $mod+Shift+d exec --no-startup-id ~/Projects/.dotfiles/config/rofi/run.sh
+bindsym $mod+d exec --no-startup-id /rofi/run/script
+bindsym $mod+Shift+d exec --no-startup-id /rofi/drun/script
 
 # change focus
 bindsym $mod+h focus left
@@ -53,7 +55,7 @@ bindsym $mod+space floating toggle
 bindsym $mod+Shift+space focus mode_toggle
 
 # Lock screen
-bindsym $mod+x exec --no-startup-id $HOME/.bin/scripts/lock.sh
+bindsym $mod+x exec --no-startup-id /path/to/lock/script
 
 # Workspace name definitions
 set $ws1 "1"
@@ -67,11 +69,8 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# Unity workaround
-set $unity-refresh exec i3-msg [class="Unity"] fullscreen toggle; exec i3-msg [class="Unity"] fullscreen toggle
-
 # switch to workspace
-bindsym $mod+1 workspace number $ws1; $unity-refresh
+bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
 bindsym $mod+4 workspace number $ws4
@@ -111,7 +110,7 @@ exec_always setxkbmap se
 exec_always xset m 1
 
 # Picom
-exec_always --no-startup-id ~/Projects/.dotfiles/config/picom/launch.sh
+exec_always --no-startup-id /path/to/picom/launch/script
 
 # -- Definitions --
 set $mod Mod4
@@ -131,22 +130,7 @@ gaps inner $inner_gaps
 gaps outer $outer_gaps
 
 # Polybar
-exec_always --no-startup-id ~/Projects/.dotfiles/config/polybar/launch.sh
+exec_always --no-startup-id /path/to/polybar/launch/script
 
 # Display wallpaper
-exec_always --no-startup-id ~/.config/nitrogen/launch.sh
-
-# Restore pywal theme
-exec_always --no-startup-id wal -R
-
-for_window [title="TERMINAL"] floating enable
-
-for_window [class="firefox"] move to workspace $ws2
-for_window [class="Spotify"] move to workspace $ws3
-for_window [class="discord"] move to workspace $ws3
-
-# Layout
-exec --no-startup-id i3-msg 'exec --no-startup-id /usr/bin/alacritty --title "TERMINAL1"'
-exec --no-startup-id i3-msg 'exec /usr/bin/firefox'
-exec --no-startup-id i3-msg 'exec --no-startup-id /usr/bin/spotify'
-exec --no-startup-id i3-msg 'exec --no-startup-id /usr/bin/discord'
+exec_always --no-startup-id /path/to/nitrogen/restore/script
